--- a/keights/resources/usr/lib/systemd/system/keights-signal.service
+++ b/keights/resources/usr/lib/systemd/system/keights-signal.service
@@ -24,5 +24,9 @@ ExecStart=/bin/sh -c ' \
     /usr/bin/keights signal \
         -n ${KEIGHTS_STACK_NAME} \
         -r ${KEIGHTS_RESOURCE} \
-        -s SUCCESS \
+        -s SUCCESS && \
+    if ${KEIGHTS_MASTER}; then \
+        sleep 300 && \
+        systemctl restart kubelet; \
+    fi \
 '
