--- a/ci/tasks/run-e2e.yml
+++ b/ci/tasks/run-e2e.yml
@@ -10,6 +10,9 @@ image_resource:
 inputs:
 - name: artifacts-in
 
+outputs:
+- name: artifacts-out
+
 params:
   SONOBUOY_URL: https://github.com/heptio/sonobuoy/releases/download/v0.12.1/sonobuoy_0.12.1_linux_amd64.tar.gz
   KUBECONFIG: artifacts-in/kubeconfig
@@ -71,11 +74,11 @@ run:
 
     echo -n 'Checking e2e results...'
     mkdir results
-    sonobuoy retrieve results
-    failed=`sonobuoy e2e results/*.tar.gz | grep -A 1 'failed tests' | tail -1`
+    sonobuoy retrieve artifacts-out
+    failed=`sonobuoy e2e artifacts-out/*.tar.gz | grep -A 1 'failed tests' | tail -1`
     if [ -n "${failed}" ]; then
         echo ' error:'
-        sonobuoy e2e results/*.tar.gz
+        sonobuoy e2e artifacts-out/*.tar.gz
         exit 1
     fi
     echo ' all tests passed'
