--- a/stack/ami/debian/playbook.yml
+++ b/stack/ami/debian/playbook.yml
@@ -276,6 +276,10 @@
           mode: '0644'
         - path: etc/systemd/system/docker.service.d/cloudboss.conf
           mode: '0644'
+        - path: etc/udev/rules.d/70-ec2-nvme-devices.rules
+          mode: '0644'
+        - path: usr/sbin/ebsnvme-id
+          mode: '0755'
 
     - name: set fstab filesystem mounts
       mount:
