Update to support Kubernetes 1.14
* kubeadm init & join configs have been updated after running
  `kubeadm config migrate`
* update CNI to 0.7.5
* update kubernetes-dashboard to 1.10.1
* update README with 1.14 CI statuses
* update CI asset directories for v1.14 and upgrades from v1.13
* update Sonobuoy version in CI task with 1.14 support
* remove timed restart of kubelet after master is initialized;
  this was used for 1.12 -> 1.13 upgrades

--- a/keights/resources/usr/lib/systemd/system/keights-signal.service
+++ b/keights/resources/usr/lib/systemd/system/keights-signal.service
@@ -24,9 +24,5 @@ ExecStart=/bin/sh -c ' \
     /usr/bin/keights signal \
         -n ${KEIGHTS_STACK_NAME} \
         -r ${KEIGHTS_RESOURCE} \
-        -s SUCCESS && \
-    if ${KEIGHTS_MASTER}; then \
-        sleep 300 && \
-        systemctl restart kubelet; \
-    fi \
+        -s SUCCESS \
 '
