--- a/ci/tasks/run-e2e.yml
+++ b/ci/tasks/run-e2e.yml
@@ -14,7 +14,7 @@ outputs:
 - name: artifacts-out
 
 params:
-  SONOBUOY_URL: https://github.com/heptio/sonobuoy/releases/download/v0.13.0/sonobuoy_0.13.0_linux_amd64.tar.gz
+  SONOBUOY_URL: https://github.com/heptio/sonobuoy/releases/download/v0.14.0/sonobuoy_0.14.0_linux_amd64.tar.gz
   KUBECTL_URL: https://storage.googleapis.com/kubernetes-release/release/v1.13.4/bin/linux/amd64/kubectl
   KUBECONFIG: artifacts-in/kubeconfig
   CNI_PLUGIN_DAEMONSET: kube-router
@@ -47,51 +47,16 @@ run:
     kubectl wait --for=condition=complete --timeout=600s job/verify-network
     kubectl delete job verify-network
 
-    echo "Running sonobuoy version `sonobuoy version`"
+    echo "Running sonobuoy `sonobuoy version --short`"
 
-    sonobuoy run
-
-    echo -n 'Waiting for sonobuoy to come up...'
-    now=`date +%s`
-    end=$((${now}+300))
-    while true; do
-        if [ `date +%s` -gt ${end} ]; then
-            echo ' timeout'
-            sonobuoy status
-            exit 1
-        fi
-        sonobuoy status >/dev/null 2>&1 && break || true
-        sleep 1
-    done
-    echo ' ok'
-
-    echo -n 'Waiting for e2e tests to complete...'
-    now=`date +%s`
-    end=$((${now}+7200))
-    while true; do
-        if [ `date +%s` -gt ${end} ]; then
-            echo ' timeout'
-            sonobuoy status
-            exit 1
-        fi
-        if sonobuoy status | grep -q 'Sonobuoy has completed'; then
-            # `sonobuoy retrieve` doesn't always work immediately,
-            # so sleep a little extra before breaking.
-            sleep 30
-            break
-        fi
-        echo -n '.'
-        sleep 30
-    done
-    echo ' ok'
+    sonobuoy run --wait=120
 
     echo -n 'Checking e2e results...'
-    mkdir results
-    sonobuoy retrieve artifacts-out
-    failed=`sonobuoy e2e artifacts-out/*.tar.gz | grep -A 1 'failed tests' | tail -1`
-    if [ -n "${failed}" ]; then
+    results=`sonobuoy retrieve artifacts-out`
+    failed=`sonobuoy e2e ${results} | awk '/failed tests:/{print $3}'`
+    if [ "${failed}" != 0 ]; then
         echo ' error:'
-        sonobuoy e2e artifacts-out/*.tar.gz
+        sonobuoy e2e ${results}
         exit 1
     fi
     echo ' all tests passed'
