--- a/ci/tasks/run-e2e.yml
+++ b/ci/tasks/run-e2e.yml
@@ -15,7 +15,9 @@ outputs:
 
 params:
   SONOBUOY_URL: https://github.com/heptio/sonobuoy/releases/download/v0.13.0/sonobuoy_0.13.0_linux_amd64.tar.gz
+  KUBECTL_URL: https://storage.googleapis.com/kubernetes-release/release/v1.13.4/bin/linux/amd64/kubectl
   KUBECONFIG: artifacts-in/kubeconfig
+  CNI_PLUGIN_DAEMONSET: kube-router
 
 run:
   path: /bin/sh
@@ -32,7 +34,18 @@ run:
     mkdir -p /opt/bin
     gunzip -c /tmp/sonobuoy.tar.gz | tar -xf - -C /opt/bin sonobuoy
 
+    wget -O /opt/bin/kubectl ${KUBECTL_URL}
+    chmod ugo+x /opt/bin/kubectl
+
     export PATH=/opt/bin:${PATH}
+
+    echo "Waiting for ${CNI_PLUGIN_DAEMONSET} daemonset to be rolled out..."
+    kubectl -n kube-system rollout status ds --timeout=600s ${CNI_PLUGIN_DAEMONSET}
+
+    echo "Waiting for network..."
+    kubectl create job verify-network --image busybox:1.28.1 -- nc -z kubernetes 443
+    kubectl wait --for=condition=complete --timeout=600s job/verify-network
+    kubectl delete job verify-network
 
     echo "Running sonobuoy version `sonobuoy version`"
 
