Update to support Kubernetes 1.15
* Update kubeadm init and join configs with new versions and
  options.
* This includes switching to cgroupfs cgroup driver in kubelet
  due to https://github.com/kubernetes/kubernetes/issues/76531.
* Add AWS RBAC to keights-system Ansible role since
  https://github.com/kubernetes/kubernetes/pull/66635 removes
  those permissions by default.
* Update CI assets and README build status badges.

--- a/keights/resources/usr/share/keights/kubeadm-init-config.yaml.template
+++ b/keights/resources/usr/share/keights/kubeadm-init-config.yaml.template
@@ -1,4 +1,4 @@
-apiVersion: kubeadm.k8s.io/v1beta1
+apiVersion: kubeadm.k8s.io/v1beta2
 bootstrapTokens:
 - groups:
   - system:bootstrappers:kubeadm:default-node-token
@@ -28,7 +28,7 @@ apiServer:
     cloud-provider: aws
     external-hostname: {{ .APIServer }}
   timeoutForControlPlane: 4m0s
-apiVersion: kubeadm.k8s.io/v1beta1
+apiVersion: kubeadm.k8s.io/v1beta2
 certificatesDir: /etc/kubernetes/pki
 clusterName: kubernetes
 controlPlaneEndpoint: {{ .APIServer }}:{{ .APIPort }}
@@ -84,7 +84,6 @@ clientConnection:
 clusterCIDR: {{ .PodSubnet }}
 configSyncPeriod: 15m0s
 conntrack:
-  max: null
   maxPerCore: 32768
   min: 131072
   tcpCloseWaitTimeout: 1h0m0s
@@ -101,6 +100,7 @@ ipvs:
   excludeCIDRs: null
   minSyncPeriod: 0s
   scheduler: ""
+  strictARP: false
   syncPeriod: 30s
 kind: KubeProxyConfiguration
 metricsBindAddress: 127.0.0.1:10249
@@ -130,12 +130,12 @@ authorization:
   webhook:
     cacheAuthorizedTTL: 5m0s
     cacheUnauthorizedTTL: 30s
-cgroupDriver: systemd
+cgroupDriver: cgroupfs
 cgroupsPerQOS: true
 clusterDNS:
 - {{ .ClusterDNS }}
 clusterDomain: {{ .ClusterDomain }}
-configMapAndSecretChangeDetectionStrategy: Cache
+configMapAndSecretChangeDetectionStrategy: Watch
 containerLogMaxFiles: 5
 containerLogMaxSize: 10Mi
 contentType: application/vnd.kubernetes.protobuf
