--- a/keights/resources/usr/share/keights/kubeadm-join-config.yaml.template
+++ b/keights/resources/usr/share/keights/kubeadm-join-config.yaml.template
@@ -1,5 +1,4 @@
-apiVersion: kubeadm.k8s.io/v1beta1
-kind: JoinConfiguration
+apiVersion: kubeadm.k8s.io/v1beta2
 caCertPath: /etc/kubernetes/pki/ca.crt
 discovery:
   bootstrapToken:
@@ -7,9 +6,9 @@ discovery:
     caCertHashes:
     - sha256:{{ .CACertHash }}
     token: {{ .Token }}
-    unsafeSkipCAVerification: false
   timeout: 5m0s
   tlsBootstrapToken: {{ .Token }}
+kind: JoinConfiguration
 nodeRegistration:
   criSocket: /var/run/dockershim.sock
   kubeletExtraArgs:
@@ -17,3 +16,4 @@ nodeRegistration:
     pod-infra-container-image: {{ .ImageRepository }}/pause:3.1
     node-labels: kubernetes.io/role=node,node-role.kubernetes.io/node=,{{ range $label := .NodeLabels }}{{ $label }},{{ end }}
   name: {{ .NodeName }}
+  taints: null
