Pin Debian release to stretch instead of stable
Debian stable is now buster, which causes breakage due to iptables
update, see https://github.com/kubernetes/kubernetes/issues/71305.

--- a/stack/ami/debian/playbook.yml
+++ b/stack/ami/debian/playbook.yml
@@ -111,7 +111,7 @@
           --merged-usr \
           --exclude={{ bootstrap_exclude | join(",") }} \
           --include={{ bootstrap_include | join(",") }} \
-          stable /mnt {{ base_repo }}
+          {{ debian_release }} /mnt {{ base_repo }}
       args:
         # Pick a file, any file...
         creates: /mnt/usr/bin/vi
