Update to support Kubernetes 1.16
* Remove deprecated node labels
* Add/update `cniVersion` in CNI configs.
* Update API versions for resources in CNI plugin manifests.
* Replace `scheduler.alpha.kubernetes.io/critical-pod` annotations with a
  `priorityClassName` of `system-node-critical` in CNI plugin manifests.
* Use `matchLabels` in Deployments and DaemonSets in manifests.
* Update CI assets for creating and updating clusters.
* Update Sonobuoy to new version for 1.16 with new CLI option.
* Update README for CI status badges.

--- a/keights/resources/usr/share/keights/kubeadm-join-config.yaml.template
+++ b/keights/resources/usr/share/keights/kubeadm-join-config.yaml.template
@@ -14,6 +14,6 @@ nodeRegistration:
   kubeletExtraArgs:
     cloud-provider: aws
     pod-infra-container-image: {{ .ImageRepository }}/pause:3.1
-    node-labels: kubernetes.io/role=node,node-role.kubernetes.io/node=,{{ range $label := .NodeLabels }}{{ $label }},{{ end }}
+    node-labels: {{ range $label := .NodeLabels }}{{ $label }},{{ end }}
   name: {{ .NodeName }}
   taints: null
