--- a/ci/tasks/run-e2e.yml
+++ b/ci/tasks/run-e2e.yml
@@ -14,8 +14,8 @@ outputs:
 - name: artifacts-out
 
 params:
-  SONOBUOY_URL: https://github.com/heptio/sonobuoy/releases/download/v0.15.0/sonobuoy_0.15.0_linux_amd64.tar.gz
-  KUBECTL_URL: https://storage.googleapis.com/kubernetes-release/release/v1.15.0/bin/linux/amd64/kubectl
+  SONOBUOY_URL: https://github.com/vmware-tanzu/sonobuoy/releases/download/v0.16.1/sonobuoy_0.16.1_linux_amd64.tar.gz
+  KUBECTL_URL: https://storage.googleapis.com/kubernetes-release/release/v1.16.0/bin/linux/amd64/kubectl
   KUBECONFIG: artifacts-in/kubeconfig
   CNI_PLUGIN_DAEMONSET: kube-router
 
@@ -49,7 +49,7 @@ run:
 
     echo "Running sonobuoy `sonobuoy version --short`"
 
-    sonobuoy run --wait=180
+    sonobuoy run --wait=180 --mode certified-conformance
 
     echo -n 'Checking e2e results...'
     results=`sonobuoy retrieve artifacts-out`
