Update Calico to 3.9.1
Changes include:
* Modifying the manifest to use newer Kubernetes API versions.
* Configuring flex volume plugin path for kubelet and kube-controller-manager
  for use by Calico pod2daemon.
* Adding the cluster-proportional-autoscaler controller to automatically set
  the number of Typha replicas based on cluster size.

--- a/keights/resources/usr/share/keights/kubeadm-init-config.yaml.template
+++ b/keights/resources/usr/share/keights/kubeadm-init-config.yaml.template
@@ -15,6 +15,7 @@ nodeRegistration:
   criSocket: /var/run/dockershim.sock
   kubeletExtraArgs:
     cloud-provider: aws
+    volume-plugin-dir: /var/lib/kubelet/plugins/volume/exec
   name: {{ .NodeName }}
   taints:
   - effect: NoSchedule
@@ -36,6 +37,12 @@ controllerManager:
   extraArgs:
     cloud-provider: aws
     configure-cloud-routes: "false"
+    flex-volume-plugin-dir: /var/lib/kubelet/plugins/volume/exec
+  extraVolumes:
+  - name: var-lib-kubelet-plugins-volume-exec
+    hostPath: /var/lib/kubelet/plugins/volume/exec
+    mountPath: /var/lib/kubelet/plugins/volume/exec
+    readOnly: true
 dns:
   type: CoreDNS
 etcd:
