Make access to NodePorts configurable
This adds an a parameter `NodePortAccessCidr` to the common CloudFormation
template. This is being done mainly for the purpose of testing, as the
conformance suite now tests NodePort on the public IPs of the nodes.

--- a/stack/ansible/keights-stack/tasks/main.yml
+++ b/stack/ansible/keights-stack/tasks/main.yml
@@ -98,6 +98,7 @@
       ApiAccessCidr: '{{ keights_stack.api_access_cidr }}'
       # TODO: give masters and nodes separate ssh_access_cidr
       SshAccessCidr: '{{ keights_stack.ssh_access_cidr }}'
+      NodePortAccessCidr: '{{ keights_stack.node_port_access_cidr | default("") }}'
       KeightsVersion: '{{ keights_version }}'
       ResourceBucket: '{{ keights_stack.resource_bucket }}'
     tags:
