Add route reflector configuration to kube-router
If `keights_system.network.rr_node_label` is defined for the keights-system
Ansible role, nodes matching the given label will be annotated as route reflector
servers. Nodes not matching will be annotated as route reflector clients. If
`keights_system.network.rr_node_label` is not defined at all, no nodes will be
annotated and kube-router will be run as a full mesh, like the current
configuration.

--- a/stack/ansible/keights-system/tasks/main.yml
+++ b/stack/ansible/keights-system/tasks/main.yml
@@ -1,4 +1,21 @@
 ---
+- name: set keights version
+  set_fact:
+    keights_version: '{{ item }}'
+  with_file:
+    - '{{ role_path }}/version'
+
+- name: set default values
+  set_fact:
+    k8s_version: '{{ keights_system.k8s_version | default(keights_version.split("-")[0]) }}'
+    rr_cluster_id: '{{ keights_system.network.rr_cluster_id | default(42) }}'
+
+- name: assert that route reflector cluster id is an integer
+  assert:
+    that:
+      - '{{ rr_cluster_id | int }}'
+    msg: '`keights_system.network.rr_cluster_id` must be an integer'
+
 - name: define ssm paths
   set_fact:
     ca_cert_ssm_path: '/{{ keights_system.cluster_name }}/cluster/ca.crt'
