Enable route reflectors for CI clusters

--- a/ci/assets/v1.15/cluster/playbook.yml
+++ b/ci/assets/v1.15/cluster/playbook.yml
@@ -29,3 +29,5 @@
       cluster_apiserver: '{{ master_stack.stack_outputs.LoadBalancerDnsName }}'
       network:
         plugin: kube-router
+        # Let the masters act as route reflectors for CI clusters
+        rr_node_label: node-role.kubernetes.io/master
