--- a/stack/cloudformation/common.yml
+++ b/stack/cloudformation/common.yml
@@ -272,13 +272,13 @@ Resources:
             Action:
               - ssm:GetParameters
             Resource:
-              - !Sub 'arn:aws:ssm:${AWS::Region}:${AWS::AccountId}:parameter/${ClusterName}/cluster/*'
-              - !Sub 'arn:aws:ssm:${AWS::Region}:${AWS::AccountId}:parameter/${ClusterName}/controller/*'
+              - !Sub 'arn:${AWS::Partition}:ssm:${AWS::Region}:${AWS::AccountId}:parameter/${ClusterName}/cluster/*'
+              - !Sub 'arn:${AWS::Partition}:ssm:${AWS::Region}:${AWS::AccountId}:parameter/${ClusterName}/controller/*'
           - Effect: Allow
             Action:
               - kms:Decrypt
             Resource:
-              - !Sub 'arn:aws:kms:${AWS::Region}:${AWS::AccountId}:key/${KmsKeyId}'
+              - !Sub 'arn:${AWS::Partition}:kms:${AWS::Region}:${AWS::AccountId}:key/${KmsKeyId}'
 
   K8sNodeAccess:
     Type: AWS::IAM::ManagedPolicy
@@ -299,12 +299,12 @@ Resources:
             Action:
               - 'ssm:GetParameters'
             Resource:
-              - !Sub 'arn:aws:ssm:${AWS::Region}:${AWS::AccountId}:parameter/${ClusterName}/cluster/*'
+              - !Sub 'arn:${AWS::Partition}:ssm:${AWS::Region}:${AWS::AccountId}:parameter/${ClusterName}/cluster/*'
           - Effect: Allow
             Action:
               - kms:Decrypt
             Resource:
-              - !Sub 'arn:aws:kms:${AWS::Region}:${AWS::AccountId}:key/${KmsKeyId}'
+              - !Sub 'arn:${AWS::Partition}:kms:${AWS::Region}:${AWS::AccountId}:key/${KmsKeyId}'
           - Effect: Allow
             Action:
               - sts:AssumeRole
@@ -324,7 +324,7 @@ Resources:
               - logs:CreateLogStream
               - logs:PutLogEvents
             Resource:
-              - 'arn:aws:logs:*:*:*'
+              - !Sub 'arn:${AWS::Partition}:logs:*:*:*'
           - Effect: Allow
             Action:
               - 'ec2:Describe*'
@@ -341,13 +341,13 @@ Resources:
               - ssm:GetParameters
               - ssm:PutParameter
             Resource:
-              - !Sub 'arn:aws:ssm:${AWS::Region}:${AWS::AccountId}:parameter/${ClusterName}/*'
+              - !Sub 'arn:${AWS::Partition}:ssm:${AWS::Region}:${AWS::AccountId}:parameter/${ClusterName}/*'
           - Effect: Allow
             Action:
               - kms:Decrypt
               - kms:Encrypt
             Resource:
-              - !Sub 'arn:aws:kms:${AWS::Region}:${AWS::AccountId}:key/${KmsKeyId}'
+              - !Sub 'arn:${AWS::Partition}:kms:${AWS::Region}:${AWS::AccountId}:key/${KmsKeyId}'
 
   K8sLambdaRoute53ManagedAccess:
     Type: AWS::IAM::ManagedPolicy
@@ -361,7 +361,7 @@ Resources:
             Action:
               - route53:ChangeResourceRecordSets
             Resource:
-              - !Sub 'arn:aws:route53:::hostedzone/${HostedZone}'
+              - !Sub 'arn:${AWS::Partition}:route53:::hostedzone/${HostedZone}'
 
   K8sLambdaRoute53UnmanagedAccess:
     Type: AWS::IAM::ManagedPolicy
@@ -375,7 +375,7 @@ Resources:
             Action:
               - route53:ChangeResourceRecordSets
             Resource:
-              - !Sub 'arn:aws:route53:::hostedzone/${EtcdHostedZoneId}'
+              - !Sub 'arn:${AWS::Partition}:route53:::hostedzone/${EtcdHostedZoneId}'
 
   MasterRole:
     Type: AWS::IAM::Role
